src/index.less
/* ... */
.@{css-prefix}-checkbox {
  position: relative;
  display: inline-block;
  backface-visibility: hidden;
  outline: 0;
  vertical-align: baseline;
  font-style: normal;
  font-size: 1rem;
  line-height: 1em;

  >input {
    position: absolute;
    top: 0;
    left: 0;
    opacity: 0 !important;
    outline: 0;
    z-index: -1;
  }
}

.@{css-prefix}-suggest,
.@{css-prefix}-contextmenu,
.@{css-prefix}-sort-filter {
  position: absolute;
  box-shadow: 1px 2px 5px 2px rgba(51, 51, 51, 0.15);
  background: #fff;
  z-index: 100;
  width: 260px;
  pointer-events: auto;
  overflow: auto;
}

.@{css-prefix}-suggest {
  width: 200px;
}

.@{css-prefix}-filter {
  border: 1px solid #e9e9e9;
  font-size: 12px;
  margin: 10px;

  .@{css-prefix}-header {
    padding: .5em .75em;
    background: #f8f8f9;
    border-bottom: 1px solid #e9e9e9;
    border-left: 1px solid transparent;
  }

  .@{css-prefix}-body {
    height: 200px;
    overflow-y: auto;

    .@{css-prefix}-item {
      height: 20px;
      line-height: 20px;
    }
  }
}

.@{css-prefix}-sort-filter {
  .@{css-prefix}-buttons {
    margin: 10px;
  }
}

.@{css-prefix}-toolbar,
.@{css-prefix}-bottombar {
  height: 40px;
  padding: 0 30px;
  text-align: left;
  background: #f5f6f7;
  display: flex;
}

.@{css-prefix}-bottombar {
  position: relative;
  border-top: 1px solid #e0e2e4;

  .@{css-prefix}-menu>li {
    line-height: 40px;
    height: 40px;
    padding-top: 0;
    padding-bottom: 0;
    vertical-align: middle;
    border-right: 1px solid #e8eaed;
  }
}

.@{css-prefix}-menu {
  list-style: none;
  margin: 0;
  padding: 0;
  user-select: none;
}

.@{css-prefix}-menu>li {
  float: left;
  line-height: 1.25em;
  padding: .785em 1em;
  margin: 0;
  vertical-align: middle;
  text-align: left;
  font-weight: 400;
  color: #80868b;
  white-space: nowrap;
  cursor: pointer;
  transition: all .3s;
  font-weight: bold;

  &.active {
    background-color: #fff;
    color: rgba(0, 0, 0, .65);
  }

  .@{css-prefix}-icon {
    margin: 0 6px;

    .@{css-prefix}-icon-img {
      &:hover {
        opacity: .85;
      }
    }
  }

  .@{css-prefix}-dropdown {
    display: inline-block;
  }
}

.@{css-prefix}-toolbar {
  border-bottom: 1px solid #e0e2e4;

  .@{css-prefix}-toolbar-btns {
    display: inline-flex;
  }

  .@{css-prefix}-toolbar-more {
    padding: 0 6px 6px;
    text-align: left;

    .@{css-prefix}-toolbar-divider {
      margin-top: 0;
    }

    // margin-right: 100px;
  }

  .@{css-prefix}-toolbar-btn {
    flex: 0 0 auto;
    display: inline-block;
    border: 1px solid transparent;
    height: 26px;
    line-height: 26px;
    min-width: 26px;
    margin: 6px 1px 0;
    padding: 0;
    text-align: center;
    border-radius: 2px;

    &.disabled {
      pointer-events: none;
      opacity: 0.5;
    }

    &:hover,
    &.active {
      background: rgba(0, 0, 0, .08);
    }
  }
}

.@{css-prefix}-toolbar-divider {
  display: inline-block;
  border-right: 1px solid #e0e2e4;
  width: 0;
  vertical-align: middle;
  height: 18px;
  margin: 12px 3px 0;
}

.@{css-prefix}-print {
  position: absolute;
  left: 0;
  top: 0;
  z-index: 100;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
}

.@{css-prefix}-print-bar {
  background: #424242;
  height: 60px;
  line-height: 60px;
  padding: 0 30px;

  .-title {
    color: #fff;
    font-weight: bold;
    font-size: 1.2em;
    float: left;
  }

  .-right {
    float: right;
    margin-top: 12px;
  }
}

.@{css-prefix}-print-content {
  display: flex;
  flex: auto;
  flex-direction: row;
  background: #d0d0d0;
  height: calc(100% - 60px);

  .-sider {
    flex: 0 0 300px;
    width: 300px;
    border-left: 2px solid #ccc;
    background: #fff;
  }

  .-content {
    flex: auto;
    overflow-x: auto;
    overflow-y: scroll;
    height: 100%;
  }
}


.@{css-prefix}-canvas-card-wraper {
  margin: 40px 20px;
}

.@{css-prefix}-canvas-card {
  background: #fff;
  margin: auto;
  page-break-before: auto;
  page-break-after: always;
  box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 3px rgba(0, 0, 0, 0.12), 0 4px 5px 0 rgba(0, 0, 0, 0.20);
}

.@{css-prefix}-calendar {
  color: rgba(0, 0, 0, .65);
  background: #ffffff;
  user-select: none;

  .calendar-header {
    font-weight: 700;
    line-height: 30px;
    text-align: center;
    width: 100%;
    float: left;
    background: #f9fafb;

    .calendar-header-left {
      padding-left: 5px;
      float: left;
    }

    .calendar-header-right {
      float: right;

      a {
        padding: 3px 0;
        margin-right: 2px;
        border-radius: 2px;
      }

      a:hover {
        background: rgba(0, 0, 0, .08);
      }
    }
  }

  .calendar-body {
    border-collapse: collapse;
    border-spacing: 0;

    th,
    td {
      width: 100%/7;
      min-width: 32px;
      text-align: center;
      font-weight: 700;
      line-height: 30px;
      padding: 0;
    }

    td>.cell {
      // border: 1px solid rgba(0,0,0,.05);

      &:hover {
        background: #ecf6fd;
      }

      &.active,
      &.active:hover {
        background: #ecf6fd;
        color: #2185D0;
      }

      &.disabled {
        pointer-events: none;
        opacity: 0.5;
      }
    }
  }
}

.@{css-prefix}-datepicker {
  box-shadow: 2px 2px 5px rgba(0, 0, 0, .2);
  position: absolute;
  left: 0;
  top: calc(100% + 5px);
  z-index: 10;
  width: auto;
}

.@{css-prefix}-buttons {
  display: flex;
  justify-content: flex-end;

  .@{css-prefix}-button {
    margin-left: 8px;
  }
}
/* ... */

